Python 3 update: First draft version
This is the first draft version with update to
Python 3, Django 3.1 and the new django registration
module. Basic login and item registration functionality
seems functional.

Known broken:
- Everything RT related
- Probably everything invoice rendering related

--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -7,6 +7,6 @@
 
 <p>You have been logged out.</p>
 
-<p>Use the <a href="{% url 'auth_login' %}">login screen</a> to login again or as another user.</p>
+<p>Use the <a href="{% url 'login' %}">login screen</a> to login again or as another user.</p>
 
 {% endblock %}
