--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -9,5 +9,5 @@
 
 {% crispy form form.helper %}
 
-<p><a href="/accounts/password/change">Change your password</a></p>
+<p><a href="{% url 'password_change' %}">Change your password</a></p>
 {% endblock %}
