Replace G+ with Linkedin
This patch fixes the TextOptOut rendering in crispy forms.
Moreover, replace Google+ with Linkedin.

--- a/templates/sponsor/sponsoring/xmlexport.html
+++ b/templates/sponsor/sponsoring/xmlexport.html
@@ -35,10 +35,9 @@
 					<accountName>{{sponsor.facebookAccount}}</accountName>
 					<fanpageUrl>{{sponsor.facebookPage}}</fanpageUrl>
 				</facebook>
-				<googlePlus>
-					<accountName>{{sponsor.gplusAccount}}</accountName>
-					<fanpageUrl>{{sponsor.gplusPage}}</fanpageUrl>
-				</googlePlus>
+				<linkedin>
+					<url>{{sponsor.linkedinPage}}</url>
+				</linkedin>
 				<twitter>
 					<accountName>{{sponsor.twitterAccount}}</accountName>
 				</twitter>
