include devroom.room in XML export as <room>
Signed-off-by: Lukas Schauer <lukas@schauer.dev>

--- a/templates/devroom/xmlexport.html
+++ b/templates/devroom/xmlexport.html
@@ -33,6 +33,9 @@
 					</person>
 				{% endfor %}
 			</participants>
+			<room>
+				{{project.room}}
+			</room>
 		</devroom>
 	{% endfor %}
 </devrooms>
