updated corporate identity branding foo

--- a/templates/master.html
+++ b/templates/master.html
@@ -100,7 +100,7 @@
 					</span>
 				</span>
 				<div class="pull-right">
-					<span class ="pull-left" style="margin-top: 20px"><a href="https://www.froscon.de" target="_blank">www.froscon.de</a></span>
+					<span class ="pull-left" style="margin-top: 20px"><a href="https://froscon.org" target="_blank">froscon.org</a></span>
 					<img src="{{STATIC_URL}}favicon.png" class="pull-left" style="margin-top: 5px; margin-left:10px; height: 50px" />
 				</div>
 			</div>
